# EpitechProjects

./: README.md
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/: CMakeLists.txt  build.sh
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/config/: ingredients.json  pizzas.json
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/my-build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/my-build-release/.qt/: QtDeploySupport.cmake
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/my-build-release/plazza_autogen/: mocs_compilation.cpp
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/src/: main.cpp
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/src/Config/: Config.cpp  Config.hpp
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/src/GUI/: GuiApplication.cpp  GuiApplication.hpp  IReceptionInterface.hpp  ReceptionGUI.cpp  ReceptionGUI.hpp
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/src/IPC/: FifoIPCChannel.cpp  IIPCChannel.hpp
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/src/Kitchen/: Cook.cpp  IngredientStock.cpp  IngredientStock.hpp  Kitchen.hpp  ThreadPool.cpp  ThreadPool.hpp
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/src/Pizza/: OrderData.hpp  Pizza.cpp  Pizza.hpp  PizzaConfig.cpp  PizzaConfig.hpp
TEK-2/B-CCP-400/B-CCP-400-NAN-4-1-theplazza-eliott.tesnier/bonus/src/Process/: Process.cpp  Process.hpp
(+1537 files in other folders)
